# libpolhemus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.clangd/index/: capi.cpp.E7D03CA953D05B33.idx  capi.h.0FDB8FF9FAB597F8.idx  common.h.55F9A7CA230ACDC3.idx  context.cpp.B027C8F94507644D.idx  context.h.9FA136D38E06A19E.idx  core.cpp.5D96B3BAFD83AF43.idx  dev_handle.cpp.3C6A377E8AD3F73A.idx  dev_handle_impl.cpp.E3C03EFB3F70DAB8.idx  dev_handle_impl.h.753B2219F8CCFDCC.idx  lits.h.A39186DF98FCA8A4.idx  magic_enum.hpp.3AF4CEDAE82798A3.idx  polhemus.h.1D37178FD3625548.idx  polhemus.hpp.747206BEA467BD65.idx
cmake/: BuildType.cmake  ExportCompileCommands.cmake  FindLibUSB.cmake  ForceColored.cmake  PolhemusConfig.cmake.in  polhemusConfig.cmake.in
include/: libpolhemus.h  libpolhemus.hpp  libpolhemus_common.h  libpolhemus_macro.h  polhemus.h  polhemus.hpp
polhemus/: common.h
polhemus/capi/: capi.cpp  capi.h
polhemus/cxx/: Context.cpp  Context.h  DevHandle.cpp  DevHandleImpl.cpp  DevHandleImpl.h  context.cpp  core.cpp  dev_handle.cpp  dev_handle_impl.cpp  dev_handle_impl.h  lits.h
src/: Context.cpp  Context.h  DevHandle.cpp  DevHandle.h  DevHandleImpl.cpp  DevHandleImpl.h  Device.cpp  Device.h  capi.cpp  capi.h  core.cpp  core.h  export.h  libpolhemus.c
src/capi/: capi.cpp  capi.h
src/cxx/: Context.cpp  Context.h  DevHandle.cpp  DevHandleImpl.cpp  DevHandleImpl.h  context.cpp  context.h  core.cpp  dev_handle.cpp  dev_handle_impl.cpp  dev_handle_impl.h
test/: test.c
